# mod_broacast

./: CROSS_AGENT_MEMORY.md  HANDOFF.md  Makefile.am  README.md  SPRINT_2026-07-10.md  TESTING.md  TESTING_DTMF.md  USER_GUIDE.md  broadcast_api.c  broadcast_config.c  broadcast_core.c  broadcast_events.c  broadcast_listener.c  broadcast_member.c  broadcast_producer.c  broadcast_record.c  broadcast_speaker.c  mod_broadcast.c  mod_broadcast.h  mod_broadcast.md  mod_broadcast_agent_prompt.md  mod_broadcast_spec.md
conf/autoload_configs/: broadcast.conf.xml
examples/: broadcast_coordinator.lua  broadcast_examples.xml  interactive_roles.lua  interactive_roles.xml  scenario_cascaded.lua  scenario_cascaded.xml  scenario_few_to_many.lua  scenario_few_to_many.xml  scenario_one_to_many.lua  scenario_one_to_many.xml
test/: README.txt  run_sipp_examples.sh  test.js  test.lua
test/sipp/: bcast_listener.xml  bcast_speaker.xml
